welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:12: error: Boolean does not take parameters
   	if (vuBiscuit()){
                     ^Program:12: error: type mismatch;
 found   : Unit
 required: Boolean
   	if (vuBiscuit()){
        ^